Spelling mistakes fixed

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						</header>
 						<p>My name is Tomek, I'm 26 years old. I studied Mechanical Engineering at Maritime University in Gdynia, where I am from. Last september I stepped into professional career in IT -
 							I became participant of graduate scheme for software testers, and after few weeks of intense training signed my first contract.
-							Actually member of developer team, as a automation tester/quality engineer, working for international company that specialises in automotive financing, insurance and and related activities for one of the biggest automotive company.
+							Actually member of developer team, as an automation tester/quality engineer, working for international company that specialises in automotive financing, insurance and related activities for one of the biggest automotive company.
 							During my daily work I'm using Java Selenium to create regression-pack tests.
 							I'm great enthusiastic of technology, who is spending a lot of time for learning/building things.
 							At the moment working on my first C# project, which pretend to be first project in my porfolio.
